Created LecturerController and structure of LecturerService