@@ -7,6 +7,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Service
@@ -38,7 +39,38 @@ public class StudentServiceIMPL implements StudentService {
 
     @Override
     public List<UserDTO> getAllStudents() {
-        return List.of();
+        List<UserDTO> studentList = Arrays.asList(
+                new UserDTO("STU02", "Nimal",
+                        "Fernando", "nimalf@mail.com",
+                        "Lake Road", "Colombo 7",
+                        "Colombo", "Colombo",
+                        "abc123", Role.STUDENT),
+
+                new UserDTO("STU03", "Sithara",
+                        "Jayasinghe", "sithara.j@mail.com",
+                        "Temple Lane", "Galle Fort",
+                        "Galle", "Galle",
+                        "pass456", Role.STUDENT),
+
+                new UserDTO("STU04", "Ruwan",
+                        "Silva", "ruwan.s@mail.com",
+                        "Hill Street", "Kandy Central",
+                        "Kandy", "Kandy",
+                        "kandy321", Role.STUDENT),
+
+                new UserDTO("STU05", "Dilani",
+                        "Hettiarachchi", "dilani.h@mail.com",
+                        "Marine Drive", "Negombo North",
+                        "Negombo", "Negombo",
+                        "negombo789", Role.STUDENT),
+
+                new UserDTO("STU06", "Suresh",
+                        "Wickramasinghe", "suresh.w@mail.com",
+                        "Green Avenue", "Matara West",
+                        "Matara", "Matara",
+                        "matara123", Role.STUDENT)
+        );
+        return studentList;
     }
 
     @Override
